--- a/c++Graphs/c++Graphs.vcxproj
+++ b/c++Graphs/c++Graphs.vcxproj
@@ -124,6 +124,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="graphs.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="graphs.h" />
